# open-directory.alfredworkflow

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
src/: directory.rs  main.rs
workflow/: info.plist
